# dcw

./: .dcwrc.yaml  .dcwrc.yml  .gitignore  LICENSE  README.md  README.md.old  build.sh  cc.md  dcw-cli.md  dcw.dbg.sh  dcw.py  dcw.sh  default.yml  docker-compose.build.yml  docker-compose.example-local.yml  example-local.crypt  myttt.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
dcw/: __init__.py  cli.py  cli_bak.py  clidup.py  config.py  context.py  core.py  deployment.py  environment.py  envy.py  infra.py  logger.py  migration.py  playground.py  registry.py  repository.py  security.py  service.py  std.py  task.py  tasks.py  templates.py  tenant.py  unit.py  utils.py  vault.py
dcw-envs/: .example-local.env
dcw-services/: docker-compose.jenkins.yml
dcw-tmpls/: docker-compose.java-svc.template
dcw-units/: dcw.example.txt
dcw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dcw/extmods/: dcw_procs.py  docker.py  docker_compose.py  jenkins.py
dcw/stdmods/: artf_regs.py  deployments.py  docs.py  project.py  proocedures.py  regs.py  scm.py  scripts.py  services.py  task_collections.py  tasks.py  templates.py
docs/: dcw-0.1.2.md  dcw-0.1.3.md  dcw-cli.md  dfd.excalidraw  docs.md  options.md  reminders.md  terminology.md  vault.md
hacking/: .dcwrc.yaml  dcw-config.yml  docker-compose-default.yml  k8s.test-svc-default.yml  k8s.test-svc-web-app-client.yml  k8s.test-svc-web-app-server.yml  k8s.test-svc-web-client.yml  playground.py  test-maker.py
hacking/dcw-depls/: dc.example-local.txt
hacking/dcw-envs/: .base.env  (+5 more)
modules/: cli.sh  dcw-envs.sh  dcw-services.sh  dcw-units.sh  dcw-update.sh  dcw-version.sh  logger.sh  main.sh
services/: docker-compose.be.yml  docker-compose.db.yml
tests/: .coverage  test_dcw_data_context.py  test_dcw_env.py  test_dcw_process.py  test_dcw_svc.py  test_dcw_svc_group.py  test_dcw_svc_io.py  test_dcw_template.py  test_dcw_unit.py  test_envy.py
(+28 files in other folders)
