[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcw"
version = "0.0.1"
authors = [{ name = "Vukoman Stojanovic", email = "vs.artofdev@gmail.com" }]
description = "Deployment Configuration Wrapper | Docker Compose Wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "typer[all]",
  "colorlog",
  "PyYAML",
  "python-dotenv",
  "prompt_toolkit",
  "prettytable",
  "autopep8",
  "pylint",
]

[project.urls]
"Homepage" = "https://github.com/the-art-of-dev/dcw"
"Bug Tracker" = "https://github.com/the-art-of-dev/dcw/issues"
