[metadata]
name = dcw
version = 0.1.0

[options]
packages = dcw
install_requires =
    click
    colorlog
    PyYAML
    python-dotenv
    prompt_toolkit
    prettytable
    autopep8
    pylint
    pytest
    pytest-cov
    GitPython
    docker
    cryptography
    invoke

[options.entry_points]
console_scripts =
    dcw = dcw.cli:app
