[metadata]
name = dcw
version = 0.2.0

[options]
packages = 
    dcw
    dcw.stdmods
    dcw.extmods
install_requires =
    colorlog
    PyYAML
    prettytable
    autopep8
    pylint
    pytest
    pytest-cov
    GitPython
    docker
    cryptography
    invoke
    radon
    jenkinsapi

[options.entry_points]
console_scripts =
    dcw = dcw.cli:app
